# CogModelingRNNsTutorial

./: .gitignore  CCN2023_CogModelingRNNsTutorial2023.ipynb  LICENSE  README.md  __init__.py  agents.py  bandits.py  bandits.py.orig  cognitive-modeling-demo.ipynb  disrnn.py  hybrnn.py  rat_data.py  rat_data_loader.py  requirements.txt  rnn_utils.py  schmest.py  setup.cfg  test.py
.ipynb_checkpoints/: emptycolab-checkpoint.ipynb
CogModelingRNNsTutorial/: bandits.py  plotting.py  rat_data.py  rnn_utils.py  setup.cfg  setup.py
CogModelingRNNsTutorial/src.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cogmodelingrnns/: __init__.py  bandits.py  disrnn.py  rat_data_loader.py  rnn_utils.py
cogmodelingrnns.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
